<resources>
    <string name="app_name">Practica</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo_registro">Falló la creación del usuario</string>
    <string name="msg_fallo_login">Falló la autentificación del usuario</string>
    <string name="title_activity_central">Central</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_practica">Estados</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="msg_NombreEstado">Nombre del estado</string>
    <string name="msg_Capital">Nombre de la capital</string>
    <string name="msg_Poblacion">Numero de poblacion</string>
    <string name="msg_Costas">Cuantas costas tiene?</string>
    <string name="bt_addEstado">Agregar Estado</string>
    <string name="bt_updateEstado">Actualizar Estado</string>
    <string name="msg_estado_added">Estado agregado</string>
    <string name="msg_data">Faltan datos</string>
    <string name="msg_estado_update">Estado actualizado</string>
    <string name="delete">Eliminar Estado</string>
    <string name="seguroBorrar">¿Esta seguro de eliminar el estado</string>
    <string name="si">Si</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>