<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.practica.AddEstadoFragment" >

    <EditText
        android:id="@+id/et_nombreestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_NombreEstado"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_capital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_Capital"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_poblacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_Poblacion"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_costas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_Costas"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bt_addEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_addEstado" />
</LinearLayout>