<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_practica">

    <fragment
        android:id="@+id/nav_practica"
        android:name="com.practica.ui.practica.PracticaFragment"
        android:label="@string/menu_practica"
        tools:layout="@layout/fragment_practica" >
        <action
            android:id="@+id/action_nav_practica_to_addEstadoFragment"
            app:destination="@id/addEstadoFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.practica.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.practica.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addEstadoFragment"
        android:name="com.practica.ui.practica.AddEstadoFragment"
        android:label="fragment_add_estado"
        tools:layout="@layout/fragment_add_estado" >
        <action
            android:id="@+id/action_addEstadoFragment_to_nav_practica"
            app:destination="@id/nav_practica" />
    </fragment>
</navigation>